# melhorenvio-sdk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/API/: 1. SDK.md  2. USER.md  3. LOJA.md  6. ETIQUETAS.md  7. CARRINHO.md
docs/Projeto/: SDK.md
docs/Projeto/Resources/: 1. Auth.md  4. Company.md  5. Quotation.md  8. Checkout.md
melhorenvio/: __init__.py  sdk.py
melhorenvio/config/: __init__.py  config.py  request_options.py
melhorenvio/core/: __init__.py  base.py
melhorenvio/http/: __init__.py  http_client.py
melhorenvio/resources/: __init__.py  auth.py  cart.py  checkout.py  company.py  quotation.py  store.py  tag.py  user.py
tests/: test_auth.py
