[tool.poetry]
name = "melhorenvio"
version = "0.1.0"
description = ""
authors = ["Plinio Mikael <pliniomikael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
black = "^23.7.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]

line-length = 119

fix = true

ignore = [
    "B008", # do not perform function calls in argument defaults
    "B006", # Do not use mutable data structures for argument defaults
    "C901", # too complex
    "E402", # module level import (because fo files that modifie sys.path)
    "B904", # required to use "from" when raise an exception
]

target-version = "py311"

unfixable = ["F841"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"*/migrations/*.py" = ["E501"]

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

